isn\'n needed anymore to pass the context pointer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ bin_PROGRAMS=OS4Bootloader
 
 OS4Bootloader_SOURCES=\
 	context.h\
+	context.c\
 	uboot.h\
 	device.h\
 	ext2.h\
@@ -17,3 +18,4 @@ OS4Bootloader_SOURCES=\
 	OS4Bootloader.c
 
 OS4Bootloader_LDFLAGS = -nostartfiles -nodefaultlibs -static -Wl,-s -Wl,-N -Wl,--entry=bootstrap -Wl,--script=ldscript.lds
+CFLAGS = -O0 -fno-builtin
