added parthenope-install tool to install the bootloader on the rdb
--HG--
extra : convert_revision : 770c2f1af78430bc1a2ae8ead8ea2c5b4c283a76

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,4 +23,4 @@ Parthenope_SOURCES=\
 	parthenope.c
 
 Parthenope_LDFLAGS = -nostartfiles -nodefaultlibs -static -Wl,-s -Wl,-N -Wl,--entry=bootstrap -Wl,--script=ldscript.lds
-CFLAGS = -O0 -fno-builtin
+CFLAGS = -O0 -fno-builtin -fno-stack-protector
