--- a/configure.ac
+++ b/configure.ac
@@ -25,5 +25,6 @@ AC_TYPE_UINT8_T
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
-                 src/Makefile])
+                 src/Makefile
+		 tools/Makefile])
 AC_OUTPUT
