--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,4 +24,5 @@ Parthenope_SOURCES=\
 	parthenope.c
 
 Parthenope_LDFLAGS = -nostartfiles -nodefaultlibs -static -Wl,-s -Wl,-N -Wl,--entry=bootstrap -Wl,--script=ldscript.lds
-CFLAGS = -O0 -fno-builtin -fno-stack-protector
+CFLAGS = -fno-builtin -nostdinc -nostdlib -Os -ffixed-r2 -ffixed-r14 -ffixed-r29
+
