using simple Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,6 @@
 EXTRA_DIST=ldscript.lds
 
-bin_PROGRAMS=Parthenope
-
-Parthenope_SOURCES=\
+SOURCES=\
 	cdrom.c\
 	cdrom.h\
 	context.c\
@@ -26,14 +24,24 @@ Parthenope_SOURCES=\
 	tftp.h\
 	parthenope.c
 
-Parthenope_LDFLAGS = -nostartfiles -nodefaultlibs -static -Wl,-s -Wl,-N -Wl,--entry=bootstrap -Wl,--script=ldscript.lds
-CFLAGS = -Wall -fno-builtin -nostdinc -nostdlib -DIN_PARTHENOPE -Os -DVERSION=\"91\" -DDATE=\"`date +%-d.%-m.%Y`\"
-if USE_UBOOT
+LDFLAGS = -nostartfiles -nodefaultlibs -static -Wl,-s -Wl,-N -Wl,--entry=bootstrap -Wl,--script=ldscript.lds
+CFLAGS = -Wall -W -Werror -fno-builtin -nostdinc -nostdlib -DIN_PARTHENOPE -Os -DVERSION=\"91\" -DDATE=\"`date +%-d.%-m.%Y`\"
 CFLAGS += -ffixed-r2 -ffixed-r14 -ffixed-r29 -DUSE_UBOOT
-endif
-if USE_OPENFIRMWARE
-CFLAGS += -ffreestanding -DUSE_OPENFIRMWARE
+
+OBJECTS := $(patsubst %.c,%.o,$(filter %.c, $(SOURCES)))
+
+ifdef CROSS_COMPILE
+	CC = $(CROSS_COMPILE)gcc
 endif
 
+all: ub2lb
 
+ub2lb: $(OBJECTS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJECTS) -o ub2lb
+	
+%.o: %.c
+	$(CC) $(CFLAGS) -fPIC -c $<
+	
+clean:
+	-rm -rf ub2lb $(OBJECTS)
 
