completed Makefile for tools

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,4 +1,15 @@
-sbin_PROGRAMS=parthenope-install
+SOURCES=parthenope-install.c
+CFLAGS+=-Wall -W -Werror
 
-parthenope_install_SOURCES=parthenope-install.c
+OBJECTS := $(patsubst %.c,%.o,$(filter %.c, $(SOURCES)))
 
+all: parthenope-install
+
+parthenope-install: $(OBJECTS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJECTS) -o parthenope-install
+	
+%.o: %.c
+	$(CC) $(CFLAGS) -fPIC -c $<
+	
+clean:
+	-rm -rf ub2lb $(OBJECTS)
